--- a/project/Makefile
+++ b/project/Makefile
@@ -1,5 +1,5 @@
 AUTH_BINARY=authApp
-
+AUTH_BINARY=brokerApp
 ## up: starts all containers in the background without forcing build
 up:
 	@echo "Starting Docker images..."
@@ -7,7 +7,7 @@ up:
 	@echo "Docker images started!"
 
 ## up_build: stops docker-compose (if running), builds all projects and starts docker compose
-up_build:  build_auth
+up_build:  build_auth build_broker
 	@echo "Stopping docker images (if running...)"
 	docker compose down
 	@echo "Building (when required) and starting docker images..."
@@ -25,4 +25,10 @@ down:
 build_auth:
 	@echo "Building auth binary..."
 	cd ../auth-service && env GOOS=linux CGO_ENABLED=0 go build -o ${AUTH_BINARY} ./cmd/app
+	@echo "Done!"
+
+## build_auth: builds the auth binary as a linux executable
+build_broker:
+	@echo "Building auth binary..."
+	cd ../broker-service && env GOOS=linux CGO_ENABLED=0 go build -o ${AUTH_BINARY} ./cmd/app
 	@echo "Done!"
