--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -2,13 +2,22 @@ version: '3'
 
 services:
 
+  broker-service:
+    build:
+      context: ./../broker-service
+      dockerfile: ./../broker-service/broker-service.dockerfile
+    restart: always
+    ports:
+      - "5772:5772"
+    deploy:
+      mode: replicated
+      replicas: 1
+
   authentication-service:
     build:
       context: ./../auth-service
       dockerfile: ./../auth-service/authentication-service.dockerfile
     restart: always
-    ports:
-      - "8080:8080"
     deploy:
       mode: replicated
       replicas: 1
